--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
 
-<!-- Meta -->
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+        <!-- Meta -->
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 
-<!-- Title -->
-<title>Dima</title>
+        <!-- Title -->
+        <title>Dima</title>
 
-<!-- Favicons -->
-<link rel="shortcut icon" href="assets/img/favicon.png">
-<link rel="apple-touch-icon" href="assets/img/favicon_60x60.png">
-<link rel="apple-touch-icon" sizes="76x76" href="assets/img/favicon_76x76.png">
-<link rel="apple-touch-icon" sizes="120x120" href="assets/img/favicon_120x120.png">
-<link rel="apple-touch-icon" sizes="152x152" href="assets/img/favicon_152x152.png">
+        <!-- Favicons -->
+        <link rel="shortcut icon" href="assets/img/favicon.png">
+        <link rel="apple-touch-icon" href="assets/img/favicon_60x60.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="assets/img/favicon_76x76.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="assets/img/favicon_120x120.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="assets/img/favicon_152x152.png">
 
-<!-- Google Web Fonts -->
-<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Roboto:400,700,500,300,100' rel='stylesheet' type='text/css'>
+        <!-- Google Web Fonts -->
+        <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,500,300,100' rel='stylesheet' type='text/css'>
 
-<!-- CSS Styles -->
-<link rel="stylesheet" href="assets/css/styles.css" />
+        <!-- CSS Styles -->
+        <link rel="stylesheet" href="assets/css/styles.css" />
 
-<!-- CSS Template -->
-<link rel="stylesheet" href="assets/css/theme.min.css" />
-<link rel="stylesheet" href="assets/css/color/purple-yellow.css" id="color" />
+        <!-- CSS Template -->
+        <link rel="stylesheet" href="assets/css/theme.min.css" />
+        <link rel="stylesheet" href="assets/css/color/purple-yellow.css" id="color" />
 
-</head>
+    </head>
 
 <body class="header-vertical">
 
@@ -59,7 +59,7 @@
     <div class="social-media">
         <strong class="text-sm">Please contact me through Upwork.</strong>
         <ul class="list-inline margin-t-10">
-            <li><a href="https://www.upwork.com/freelancers/~01b60bf5d9cc4f110d">My Upwork Profile</a></li>
+            <li><a class="custom-color-text" href="https://www.upwork.com/freelancers/~01b60bf5d9cc4f110d">My Upwork Profile</a></li>
         </ul>
     </div>
 
@@ -77,7 +77,7 @@
 
         <!-- Top -->
         <div class="container container-wide text-md">
-            <i class="icon-before fa fa-comments text-primary"></i>For further information about me, please engage with <a href="#" id="chatbot" class="text-primary">my chatbot</a>
+            <i class="icon-before fa fa-comments text-primary"></i>For further information about me, please engage with <a href="#" data-target="messenger" class="text-primary">my chatbot</a>
         </div>
 
         <!-- Middle -->
@@ -595,15 +595,17 @@
     <section id="contact" class="section padding-v-60 min-fullheight">
 
         <!-- BG Map -->
-        <div id="google-map" class="bg-image" data-latitude="40.758895" data-longitude="-73.985131" data-style="light"></div>
+        <div id="google-map" class="bg-image" data-style="light">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2742.3790186748815!2d30.788584575372358!3d46.57974415832212!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c624d6a0975c73%3A0x3e0e850dc1370832!2sKrymska%20St!5e0!3m2!1sen!2sua!4v1684106346168!5m2!1sen!2sua" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
 
         <!-- Contact Box -->
         <div class="contact-box bg-secondary dark animated" data-animation="flipInY">
             <h2>Please contact me through <strong>Upwork</strong>!</h2>
             <!-- Contact List -->
-            <ul class="list-unstyled list-unstyled-icons">
+            <ul class="list-unstyled">
                 <li>
-                    <i class="inline-icon icon-before-and-after text-primary fa fa-star"></i>
+                    <i class="margin-r-10 text-primary fa fa-star"></i>
                     <a href="https://www.upwork.com/freelancers/~01b60bf5d9cc4f110d">My Upwork Profile</a>
                 </li>
             </ul>
@@ -630,7 +632,7 @@
             <img src="assets/img/photos/beauty-avatar-96x96.jpg" alt="..." class="img-circle margin-b-30">
             <h3>Please feel free to interact with <strong>my chatbot</strong> to learn more about me.</h3>
             <!-- Contact Form -->
-            <iframe height="430" src="https://bot.dialogflow.com/9f28fc32-de1a-4eca-b50b-d7a29348aee2"></iframe>
+            <!-- <iframe height="430" src="https://bot.dialogflow.com/9f28fc32-de1a-4eca-b50b-d7a29348aee2"></iframe> -->
         </div>
     </div>
 </div>
@@ -657,7 +659,7 @@
             <div class="social-media">
                 <strong class="text-sm">Please contact me through Upwork.</strong>
                 <ul class="list-inline margin-t-10">
-                    <li><a href="https://www.upwork.com/freelancers/~01b60bf5d9cc4f110d">My Upwork Profile</a></li>
+                    <li><a class="custom-color-text" href="https://www.upwork.com/freelancers/~01b60bf5d9cc4f110d">My Upwork Profile</a></li>
                 </ul>
             </div>
         </div>
@@ -682,29 +684,7 @@ window.paceOptions = {
 <script src="assets/js/plugins.js"></script>
 
 <!-- JS Core -->
-<script src="assets/js/core.min.js"></script>
-
-<!-- Custom -->
-<script src="assets/js/custom.js"></script>
-
-<!-- Google Map API -->
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-
-<!-- Google Analytics: Change UA-XXXXX-X to be your site's ID. Go to http://www.google.com/analytics/ for more information. -->
-<!--
-<script>
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-XXXXX-X']);
-    _gaq.push(['_trackPageview']);
-
-    (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-</script>
--->
-
+<script src="assets/js/core.js"></script>
 </body>
 
 </html>
