--- a/index.html
+++ b/index.html
@@ -430,6 +430,8 @@
                     <a href="#" class="messenger-close icon icon-hover icon-xs icon-circle icon-white" data-target="messenger"><i class="fa fa-times"></i></a>
                     <img src="assets/img/photos/avatar-96x96.jpg" alt="..." class="img-circle margin-b-30">
                     <h3>Please feel free to interact with <strong>my chatbot</strong> to learn more about me.</h3>
+
+                    <iframe height="430" src="https://bot.dialogflow.com/5fd7aac0-13d4-4f5e-879b-3f2ac739ecbe"></iframe>
                 </div>
             </div>
         </div>
