--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                     <img src="assets/img/photos/avatar-96x96.jpg" alt="..." class="img-circle margin-b-30">
                     <h3>Please feel free to interact with <strong>my chatbot</strong> to learn more about me.</h3>
 
-                    <iframe height="430" src="https://bot.dialogflow.com/5fd7aac0-13d4-4f5e-879b-3f2ac739ecbe"></iframe>
+                    <iframe height="430" allow="microphone;" src="https://console.dialogflow.com/api-client/demo/embedded/5fd7aac0-13d4-4f5e-879b-3f2ac739ecbe"></iframe>
                 </div>
             </div>
         </div>
