--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
                     <p>- 💬 Ask me about **chatgpt, llamaindex, langchain, dialogflow and fullstack**</p>
 
-                    <p>- 📄 Know about my experiences <a href="https://dima-vercel.com">https://dima-vercel.com</a></p>
+                    <p>- 📄 Know about my experiences <a href="https://dima-lovat.vercel.app">https://dima-lovat.vercel.app</a></p>
 
                     <p>- ⚡ Fun fact **I think I am a "codeworm".**</p>
 
