--- a/index.html
+++ b/index.html
@@ -482,8 +482,11 @@
             document.getElementById('github-container').appendChild(div);
 
             var anotherDiv = document.createElement('div');
+            anotherDiv.style.height = "100%";
             anotherDiv.innerHTML = `<iframe id="location-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2742.3790186748815!2d30.788584575372358!3d46.57974415832212!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c624d6a0975c73%3A0x3e0e850dc1370832!2sKrymska%20St!5e0!3m2!1sen!2sua!4v1684106346168!5m2!1sen!2sua" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>`
             document.getElementById('google-map').appendChild(anotherDiv);
+
+            
         });
 
     </script>
