--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
             // This code will execute after the page has fully loaded
             var div = document.createElement('div');
             div.innerHTML = `<h6 class="margin-b-50">Gitgub Activity</h6>
-                            <h1 align="center">Hi 👋, I'm Dima</h1>
+                            <h1 align="center">Hi 👋, I'm a "codeworm".</h1>
                             <h3 align="center">A passionate full stack and Artificial Intelligence expert</h3>
                             <p align="left"> <img src="https://komarev.com/ghpvc/?username=princeofdev&label=Profile%20views&color=0e75b6&style=flat" alt="princeofdev" /> </p>
 
