--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="social-media">
                 <strong class="text-sm">Please contact me through Upwork.</strong>
                 <ul class="list-inline margin-t-10">
-                    <li><a class="custom-color-text" href="https://www.upwork.com/freelancers/~01b60bf5d9cc4f110d">My Upwork Profile</a></li>
+                    <li><a class="custom-color-text" href="https://www.upwork.com/freelancers/openai">My Upwork Profile</a></li>
                 </ul>
             </div>
 
@@ -380,7 +380,7 @@
                     <ul class="list-unstyled">
                         <li>
                             <i class="margin-r-10 text-primary fa fa-star"></i>
-                            <a href="https://www.upwork.com/freelancers/~01b60bf5d9cc4f110d">My Upwork Profile</a>
+                            <a href="https://www.upwork.com/freelancers/openai">My Upwork Profile</a>
                         </li>
                     </ul>
                     <div class="margin-b-30">
